[package]
name = "dash-spv-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite", "r2d2", "chrono", "numeric"] }
r2d2 = "0.8.9"
chrono = "0.4.19"
dotenvy = "0.15"

[dependencies.dash-spv-primitives]
git = "https://github.com/pankcuf/dash-spv-primitives"
branch = "master"
version = "0.1.9"
[dependencies.dash-spv-models]
git = "https://github.com/pankcuf/dash-spv-models"
branch = "master"
version = "0.1.5"

[lib]
name = "dash_spv_storage"

[profile.release]
lto = "thin"
opt-level = 3
